--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="logo">
         <a href="./index.html">
-          <h1>COVID-19</h1>
+          COVID-19
         </a>
       </div>
       <nav class="navigation">
