added jQuary on home

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       src="https://kit.fontawesome.com/0c3127d83e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./main.js"></script>
     <title>Document</title>
   </head>
   <body>
     <header class="header">
-      <div class="logo">
+      <div class="logo" id="top">
         <a href="./index.html">
           COVID-19
         </a>
@@ -354,23 +356,25 @@
       </article>
     </main>
 
+    <div class="menu-button">
+      <img src="./images/menu/virus.png" alt="menu-button" />
+    </div>
+
     <aside class="sidenav">
       <div class="side-logo">
-        <a href="#top">COVID-19</a>
+        <a href="#top" id="up">COVID-19</a>
       </div>
-      <div>
-        <a href="#first">What is coronavirus?</a>
-        <a href="#second">How COVID-19 started?</a>
-        <a href="#third">How does it spread?</a>
-        <a href="#fourth">What are the Symptoms?</a>
-        <a href="#fifth">How deadly is it?</a>
-        <a href="#sixth">How far it has spread?</a>
-        <a href="#seventh">What is being done to stop it?</a>
-        <a href="#eighth">Is this a global crisis?</a>
-        <a href="#ninth">Are you immune to it?</a>
-        <a href="#tenth">Who is at high risk?</a>
-        <a href="#eleventh">What if I got recovered?</a>
-        <a href="#last">Are there other coronaviruses?</a>
+      <div class="menu-list">
+        <a class="menu-item" href="#first">What is coronavirus?</a>
+        <a class="menu-item" href="#second">How COVID-19 started?</a>
+        <a class="menu-item" href="#third">How does it spread?</a>
+        <a class="menu-item" href="#fourth">What are the Symptoms?</a>
+        <a class="menu-item" href="#fifth">How deadly is it?</a>
+        <a class="menu-item" href="#sixth">What is being done to stop it?</a>
+        <a class="menu-item" href="#seventh">Are you immune to it?</a>
+        <a class="menu-item" href="#eighth">Who is at high risk?</a>
+        <a class="menu-item" href="#ninth">What if I got recovered?</a>
+        <a class="menu-item" href="#tenth">Are there other coronaviruses?</a>
       </div>
     </aside>
 
