--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./CSS/main.css" />
     <script
       src="https://kit.fontawesome.com/0c3127d83e.js"
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./JS/main.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -49,7 +49,7 @@
           humans from animals. The World Health Organisation (WHO) has declared
           it a pandemic.
         </p>
-        <p>
+        <p class="more hidden">
           Coronaviruses are a large family of zoonotic viruses that cause
           illness ranging from the common cold to severe respiratory diseases.
           Zoonotic means these viruses are able to be transmitted from animals
@@ -57,16 +57,18 @@
           different animal populations that have not yet infected humans.
           COVID-19 is the most recent to make the jump to human infection.
         </p>
-        <p>
+        <p class="more hidden">
           Coronaviruses are a family of viruses that cause disease in animals.
           Seven, including the new virus, have made the jump to humans, but most
           just cause cold-like symptoms.
         </p>
-        <p>
+        <p class="more hidden">
           Two other coronaviruses – Middle East respiratory syndrome (Mers) and
           severe acute respiratory syndrome (Sars) – are much more severe,
           having killed more than 1,500 people between them since 2002.
         </p>
+        <!-- <button class="read">Read more</button> -->
+        <input type="button" value="Read more" class="read" />
       </article>
       <article id="second">
         <h2>How COVID-19 started?</h2>
@@ -79,22 +81,23 @@
           Study Group (CSG) of the International Committee proposed to name the
           new coronavirus as (SARS-CoV-2), both issued on 11 February 2020.
         </p>
-        <p>
+        <p class="more2 hidden">
           The source of the coronavirus is believed to be a "wet market" in
           Wuhan which sold both dead and live animals including fish and birds.
         </p>
-        <p>
+        <p class="more2 hidden">
           Such markets pose a heightened risk of viruses jumping from animals to
           humans because hygiene standards are difficult to maintain if live
           animals are being kept and butchered on site. Typically, they are also
           densely packed.
         </p>
-        <p>
+        <p class="more2 hidden">
           The animal source of the latest outbreak has not yet been identified,
           but the original host is thought to be bats. Bats were not sold at the
           Wuhan market but may have infected live chickens or other animals sold
           there.
         </p>
+        <input type="button" value="Read more" class="read2" />
       </article>
       <article id="third">
         <h2>How does it spread?</h2>
@@ -108,7 +111,7 @@
           face.According to scientists, coughs and sneezes can travel several
           feet and stay suspended in the air for up to 10 minutes.
         </p>
-        <p>
+        <p class="more3 hidden">
           Transmission is of particular concern on transport, where droplets
           containing the coronavirus could pass between passengers or via
           surfaces like aeroplane seats and armrests. The incubation period of
@@ -117,18 +120,19 @@
           authorities believe the virus can be transmitted before symptoms
           appear, China where wildlife was also traded illegally.
         </p>
-        <p>
+        <p class="more3 hidden">
           Close contact with an infectious person, such as shaking hands, or
           touching a doorknob, tabletop or other surfaces touched by an
           infectious person, and then touching your nose, eyes, or mouth can
           also transmit the virus.
         </p>
-        <p>
+        <p class="more3 hidden">
           Reports raised the possibility that the virus may be spread by fecal
           contamination of the environment, such as through leaky sewage pipes.
           Infections across multiple floors of a building due to contaminated
           bathroom pipes was previously demonstrated for SARS coronavirus.
         </p>
+        <input type="button" value="Read more" class="read3" />
       </article>
       <article id="fourth">
         <h2>What are the Symptoms?</h2>
@@ -140,26 +144,27 @@
           serious as a regular cold – and recover without needing any special
           treatment.
         </p>
-        <p>
+        <p class="more4 hidden">
           In more severe cases, it can lead to pneumonia, multiple organ failure
           and even death.
         </p>
-        <p>
+        <p class="more4 hidden">
           However, infected patients can also be asymptomatic, meaning they do
           not display any symptoms despite having the virus in their systems.
         </p>
-        <p>
+        <p class="more4 hidden">
           Fever and cough were the dominant symptoms whereas upper respiratory
           symptoms and gastrointestinal symptoms were rare, suggesting the
           differences in viral tropism as compared with SARS-CoV, MERS-CoV.
         </p>
-        <p>
+        <p class="more4 hidden">
           The elderly and those with underlying disorders (i.e., hypertension,
           chronic obstructive pulmonary disease, diabetes, cardiovascular
           disease), developed rapidly into acute respiratory distress syndrome,
           septic shock, metabolic acidosis hard to correct and coagulation
           dysfunction, even leading to the death
         </p>
+        <input type="button" value="Read more" class="read4" />
       </article>
       <article id="fifth">
         <h2>How deadly is it?</h2>
@@ -173,26 +178,27 @@
           worldwide and more than 300 in China alone. MERS, which did not spread
           as widely, was more deadly, killing one-third of those infected.
         </p>
-        <p>
+        <p class="more5 hidden">
           While the new coronavirus is more widespread than SARS in terms of
           case numbers, the mortality rate remains considerably lower at
           approximately 3.4 percent, according to the WHO.
         </p>
-        <p>
+        <p class="more5 hidden">
           This coronavirus is a new virus so we can only estimate the fatality
           rate of COVID-19 in these early stages.
         </p>
-        <p>
+        <p class="more5 hidden">
           Based on what we can see so far, COVID-19 is far less deadly to
           infected patients than Ebola or MERS. However, the fact that this
           coronavirus is so contagious and has crossed borders means
           significantly more people are expected to die.
         </p>
-        <p>
+        <p class="more5 hidden">
           For example, Ebola has killed about 11,300 people since its outbreak,
           a figure that COVID-19 has already surpassed. By contrast, we are
           preparing for 8,000 to 12,000 COVID-19 deaths this Summer alone.
         </p>
+        <input type="button" value="Read more" class="read5" />
       </article>
       <article id="sixth">
         <h2>What is being done to stop it?</h2>
@@ -208,17 +214,17 @@
           suit with total lockdowns, closing schools, restaurants, bars, and
           sports clubs, and also issuing mandatory work-from-home decrees.
         </p>
-        <p>
+        <p class="more6 hidden">
           International airlines have cancelled flights the world over. Some
           countries have banned non-citizens from entering their territories,
           and several more have evacuated their citizens from abroad.
         </p>
-        <p>
+        <p class="more6 hidden">
           Some countries are putting their citizens on lockdown to stop it from
           spreading more. The list of countries which has declared lockdowns
           are: Belgium, France, Italy, Ireland, UK, Germany.
         </p>
-        <p>
+        <p class="more6 hidden">
           India has also declared lockdown it's several states. The states and
           UTs that have now imposed full lockdowns include Delhi, Rajasthan,
           West Bengal, Kerala Chandigarh, Goa, J&K, Ladakh, Uttarakhand,
@@ -228,6 +234,7 @@
           curfews, as mentioned above. Uttar Pradesh has implemented a partial
           lockdown as has Madhya Pradesh and Odisha.
         </p>
+        <input type="button" value="Read more" class="read6" />
       </article>
       <article id="seventh">
         <h2>Are you immune to it?</h2>
@@ -247,20 +254,20 @@
           The coronavirus mortality rate stands at 2.4 percent, while SARS
           killed 9.6 percent of those infected.
         </p>
-        <p>
+        <p class="more7 hidden">
           If the virus keeps spreading, eventually so many people will have been
           infected and (if they survive) become immune that the outbreak will
           fizzle out on its own as the germ finds it harder and harder to find a
           susceptible host. This phenomenon is known as herd immunity.
         </p>
-        <p>
+        <p class="more7 hidden">
           Vaccines create herd immunity too, either when given widely or
           sometimes when administered in a “ring” around a new case of a rare
           infection. That’s how diseases like smallpox were eradicated and why
           polio is close to being erased. Various vaccine efforts are under way
           for this coronavirus, but they may not be ready for more than a year.
         </p>
-        <p>
+        <p class="more7 hidden">
           The coronavirus is new, so it doesn’t appear that anyone is immune to
           it: that’s what lets it spread and why it can have such severe effects
           in some people. For herd immunity to take hold, people must become
@@ -269,6 +276,7 @@
           again, because their immune system is charged with antibodies able to
           defeat it.
         </p>
+        <input type="button" value="Read more" class="read7" />
       </article>
       <article id="eighth">
         <h2>Who is at high risk?</h2>
@@ -290,12 +298,12 @@
           </li>
           <li>have a serious heart condition.</li>
         </ul>
-        <p>
+        <p class="more8 hidden">
           If you're at high risk of getting seriously ill from coronavirus,
           there are extra things you should do to avoid catching it. These
           include:
         </p>
-        <ul>
+        <ul class="more8 hidden">
           <li>
             Not leaving your home – you should not go out to do shopping, visit
             friends or family, or attend any gatherings
@@ -305,6 +313,7 @@
             possible
           </li>
         </ul>
+        <input type="button" value="Read more" class="read8" />
       </article>
       <article id="ninth">
         <h2>What if I got recovered?</h2>
@@ -319,21 +328,21 @@
           viruses. In those cases, the immunity lasts longer than that of
           seasonal influenza, but is probably not permanent
         </p>
-        <p>
+        <p class="more9 hidden">
           The majority of virologists are convinced that recovered COVID-19
           patients are immune to the new SARS-CoV-2 virus after the infection
           has run its course. After all, the body's own immune system has
           produced precisely those antibodies during the infection that render
           the pathogen harmless.
         </p>
-        <p>
+        <p class="more9 hidden">
           This all-clear also applies to those who had only a weak course of the
           disease and showed a few symptoms. Nevertheless, their immune systems
           reacted to the pathogen and produced the corresponding antibodies. A
           renewed infection with the new coronavirus is therefore highly
           unlikely.
         </p>
-        <p>
+        <p class="more9 hidden">
           However,A small study of 12 patients discharged from hospital showed
           that two or three had reduced lung function and In some patients, lung
           function could decline by about 20 to 30% after recovery. Also the
@@ -341,9 +350,10 @@
           lungs, which may get progressively worse as the illness develops.
           Nevertheless it is too early to confirm any long-term effects.
         </p>
+        <input type="button" value="Read more" class="read9" />
       </article>
       <article id="tenth">
-        <h2>What about other coronaviruses?</h2>
+        <h2>Are there other coronaviruses?</h2>
         <p>
           Severe acute respiratory syndrome (Sars) and Middle Eastern
           respiratory syndrome (Mers) are both caused by coronaviruses that came
@@ -357,7 +367,7 @@
     </main>
 
     <div class="menu-button">
-      <img src="./images/menu/virus.png" alt="menu-button" />
+      <img src="./images/virus.png" alt="menu-button" />
     </div>
 
     <aside class="sidenav">
