Treatment page done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./JS/main.js"></script>
-    <title>Document</title>
+    <title>COVID-19</title>
   </head>
   <body>
     <header class="header">
@@ -40,6 +40,7 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <article id="first">
         <h2>What is coronavirus?</h2>
@@ -247,7 +248,7 @@
           sick, are most at risk of becoming severely ill or dying from the
           coronavirus.
         </p>
-        <p>
+        <p class="more7 hidden">
           Although the total number of deaths has now exceeded those recorded
           during the 2002-2003 outbreak of severe acute respiratory syndrome
           (SARS), the current mortality rate is much lower than that of SARS.
