--- a/treatment.html
+++ b/treatment.html
@@ -3,11 +3,123 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/main.css" />
+    <script
+      src="https://kit.fontawesome.com/0c3127d83e.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Treatment</title>
   </head>
 
   <body>
-    Under work
-    <a href="./index.html" class="navlink">HOME</a>
+    <header class="header">
+      <div class="logo" id="top">
+        <a href="./index.html">
+          COVID-19
+        </a>
+      </div>
+      <nav class="navigation">
+        <ul>
+          <li>
+            <a href="./index.html" class="navlink">HOME</a>
+          </li>
+          <li>
+            <a href="./precaution.html" class="navlink">PRECAUTION</a>
+          </li>
+          <li>
+            <a href="./treatment.html" class="navlink">TREATMENT</a>
+          </li>
+          <li>
+            <a href="./rumours.html" class="navlink">RUMOURS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <article>
+        <h2>What treatments are available?</h2>
+        <p>
+          There is no specific antiviral treatment recommended for COVID-19, and
+          no vaccine is currently available. The treatment is symptomatic, and
+          oxygen therapy represents the major treatment intervention for
+          patients with severe infection. Mechanical ventilation may be
+          necessary in cases of respiratory failure refractory to oxygen
+          therapy, whereas hemodynamic support is essential for managing septic
+          shock.
+        </p>
+        <p>
+          On January 28, 2020, the WHO released a document summarizing WHO
+          guidelines and scientific evidence derived from the treatment of
+          previous epidemics from HCoVs. This document addresses measures for
+          recognizing and sorting patients with severe acute respiratory
+          disease; strategies for infection prevention and control; early
+          supportive therapy and monitoring; a guideline for laboratory
+          diagnosis; management of respiratory failure and ARDS; management of
+          septic shock; prevention of complications; treatments; and
+          considerations for pregnant patients.
+        </p>
+        <p>
+          Among these recommendations, we report the strategies for addressing
+          respiratory failure, including protective mechanical ventilation and
+          high-flow nasal oxygen (HFNO) or non-invasive ventilation (NIV).
+        </p>
+        <p>
+          There’s currently no treatment specifically approved for COVID-19, and
+          no cure for an infection, although treatments and vaccines are
+          currently under study. Instead, treatment focuses on managing symptoms
+          as the virus runs its course.
+        </p>
+        <p>
+          Seek immediate medical help if you think you have COVID-19. Your
+          doctor will recommend treatment for any symptoms or complications that
+          develop.
+        </p>
+        <p>
+          Other coronaviruses like SARS and MERS are also treated by managing
+          symptoms. In some cases, experimental treatments are tested to see how
+          effective they are. Examples of therapies used for these illnesses
+          include:
+        </p>
+        <ul>
+          <li>antiviral or retroviral medications</li>
+          <li>breathing support, such as mechanical ventilation</li>
+          <li>steroids to reduce lung swelling</li>
+          <li>blood plasma transfusions</li>
+        </ul>
+      </article>
+    </main>
+
+    <div class="menu-button">
+      <a href="#top"><img src="./images/virus.png" alt="menu-button" /></a>
+    </div>
+
+    <footer>
+      <div class="more-info">
+        <span
+          >For more informatin visit WHO ---><a
+            href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019"
+            target="_blank"
+            >here</a
+          ></span
+        >
+      </div>
+      <div class="social">
+        <a href="https://www.facebook.com/iamamamdubey" target="_blank">
+          <i class="fab fa-facebook-square"></i
+        ></a>
+        <a href="https://www.instagram.com/iamamandubey/" target="_blank"
+          ><i class="fab fa-instagram-square"></i
+        ></a>
+        <a href="https://github.com/aman-can" target="_blank"
+          ><i class="fab fa-github-square"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
