--- a/rumours.html
+++ b/rumours.html
@@ -3,11 +3,179 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/main.css" />
+    <script
+      src="https://kit.fontawesome.com/0c3127d83e.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./JS/main.js"></script>
+    <title>Rumours</title>
   </head>
 
   <body>
-    Under work
-    <a href="./index.html" class="navlink">HOME</a>
+    <header class="header">
+      <div class="logo" id="top">
+        <a href="./index.html">
+          COVID-19
+        </a>
+      </div>
+      <nav class="navigation">
+        <ul>
+          <li>
+            <a href="./index.html" class="navlink">HOME</a>
+          </li>
+          <li>
+            <a href="./precaution.html" class="navlink">PRECAUTION</a>
+          </li>
+          <li>
+            <a href="./treatment.html" class="navlink">TREATMENT</a>
+          </li>
+          <li>
+            <a href="./rumours.html" class="navlink">RUMOURS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <article>
+        <h2>Here is a list of some known rumors.</h2>
+        <ul>
+          <li>Drinking more water can save you from getting coronavirus.</li>
+          <li>
+            Consuming menthol can prevent you from getting Infected by covid-19
+            and can also cure it.
+          </li>
+          <li>
+            Doing gargles with lukewarm water mixed with salt can prevent the
+            new virus from getting spreaded.
+          </li>
+          <li>
+            to know whether you are suffering from coronavirus or not you have
+            to just hold your breath for 10 seconds and if you start coughing
+            then you are suffering from COVID-19.
+          </li>
+          <li>
+            Only those over 60 years of age and those with existing health
+            problem are at risk from the coronavirus.
+          </li>
+          <li>
+            Even if the virus get into your mouth, drinking water or other
+            liquids will wash them down through your throat and into the
+            stomach. once there, your stomach acid will kill all the virus.
+          </li>
+          <li>Coronavirus does not survive in warm weather.</li>
+          <li>Bill Gates told us about the coronavirus in 2015 .</li>
+          <li>
+            Special military helicopters will spray pesticides against the
+            coronavirus in the skies all over the country, so you must stay
+            indoor after 12 o'clock at every night and remove all clothes which
+            are hung outside.
+          </li>
+          <li>
+            Coronavirus can only live for 12 hours in open place, so staying
+            inside is a good idea.
+          </li>
+          <li class="more hidden">
+            As said by astrologers, clapping or ringing bells exactly at 5:00
+            p.m. can increase the blood circulation in human body and give us
+            strength fight coronavirus because at that time moon is passing
+            through a Nakshatra called Revathi.
+          </li>
+          <li class="more hidden">
+            In Turkey people have started to leave food packets on the road for
+            the poor and the needy who cannot earn due to covid-19 lockdown
+          </li>
+          <li class="more hidden">
+            Government is tracking people and issuing fines for those who leave
+            their homes.
+          </li>
+          <li class="more hidden">
+            UNICEF says coronavirus can only live for 12 hours on metal surfaces
+            , 9 hours on fabric and only 10 minutes on skin.
+          </li>
+          <li class="more hidden">
+            Old Chinese doctor has proven that consuming eight cloves of chopped
+            garlic and seven cups of water ,boiled together can treat
+            coronavirus overnight.
+          </li>
+          <li class="more hidden">
+            Coronavirus before it reaches the lungs it remains in throat for 4
+            days and at this time the person begins to cough. so to cure it
+            infected person should drink hot water specially boiled with salt in
+            it to treat the coronavirus and save one's life.
+          </li>
+          <li class="more hidden">
+            America has been vaccinating Cattle for coronavirus for years, yet
+            the news tells you it's new and gonna kill you so you go by mask.
+          </li>
+          <li class="more hidden">
+            coronavirus cannot live in 26 to 28 degrees, so going out in sun
+            will disappear them and doing exercises regularly will prevent you
+            from getting infected by coronavirus.
+          </li>
+          <li class="more hidden">
+            China's hero doctor who punished for telling the truth about corona
+            virus has told that the chemical Methylxanthine, Theobromine and
+            Theophylline, can be used as the treatment to cure coronavirus, and
+            all these chemicals are present in tea. So drinking it regularly can
+            be used to cure the corona.
+          </li>
+          <li class="more hidden">
+            The drug of coronavirus is given in the Intermediate Animal Science
+            book, the scientist who has written about this disease has also
+            written about its treatment and it is not a new disease, in this
+            intermediate book, It has been said that the aspirin ,anti-histamine
+            and nasal spray should be used to cure it.
+          </li>
+        </ul>
+        <input type="button" value="Read more" class="read" />
+      </article>
+      <article>
+        <h1>
+          All these are rumours ,one should not believe in them and should not
+          do anything stated here . If you find anybody who believes in this
+          then you should stop them from spreading this false news to others or
+          implementing these on themselves.
+        </h1>
+        <h1>
+          Remember :- National Disaster Management Authority has referred to
+          Section 54 of Disaster Management Act 2005, which proposes jail time
+          for those causing ‘false alarms’.
+        </h1>
+      </article>
+    </main>
+
+    <div class="top-button">
+      <a href="#top"><img src="./images/virus.png" alt="menu-button" /></a>
+    </div>
+
+    <footer>
+      <div class="more-info">
+        <span
+          >For more informatin visit WHO ---><a
+            href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019"
+            target="_blank"
+            >here</a
+          ></span
+        >
+      </div>
+      <div class="social">
+        <a href="https://www.facebook.com/iamamamdubey" target="_blank">
+          <i class="fab fa-facebook-square"></i
+        ></a>
+        <a href="https://www.instagram.com/iamamandubey/" target="_blank"
+          ><i class="fab fa-instagram-square"></i
+        ></a>
+        <a href="https://github.com/aman-can" target="_blank"
+          ><i class="fab fa-github-square"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
