PRECAUTIONS PAGE IS FIN🎬🎬

--- a/precaution.html
+++ b/precaution.html
@@ -3,11 +3,458 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/main.css" />
+    <script
+      src="https://kit.fontawesome.com/0c3127d83e.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./JS/main.js"></script>
+    <title>Precautions</title>
   </head>
 
   <body>
-    Under work
-    <a href="./index.html" class="navlink">HOME</a>
+    <header class="header">
+      <div class="logo" id="top">
+        <a href="./index.html">
+          COVID-19
+        </a>
+      </div>
+      <nav class="navigation">
+        <ul>
+          <li>
+            <a href="./index.html" class="navlink">HOME</a>
+          </li>
+          <li>
+            <a href="./precaution.html" class="navlink">PRECAUTION</a>
+          </li>
+          <li>
+            <a href="./treatment.html" class="navlink">TREATMENT</a>
+          </li>
+          <li>
+            <a href="./rumours.html" class="navlink">RUMOURS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- ************************* -->
+
+    <main>
+      <article id="first">
+        <h2>Know the signs</h2>
+        <p>
+          The symptoms of infection for the new coronavirus are often similar to
+          those of other respiratory virus infections, such as influenza.
+          Symptoms can include fever, cough, or shortness of breath. Most people
+          will only have mild symptoms, but some can become very sick. When
+          person-to-person spread has occurred with other novel coronaviruses
+          that caused diseases such as Middle East Respiratory Syndrome (MERS),
+          it is thought to have happened mainly via respiratory droplets
+          produced when an infected person coughs or sneezes, similar to how
+          influenza and other respiratory pathogens spread. Spread of MERS and
+          SARS has generally occurred between people in close contact.
+        </p>
+        <p class="more hidden">
+          If you think you may have been exposed to a person with COVID-19 and
+          have symptoms, before going to a doctor’s office or emergency room,
+          call ahead and tell them about your symptoms and any recent travel.
+        </p>
+        <p class="more hidden">
+          Depending on the severity of your symptoms, your doctor will determine
+          whether or not you need to come in to be evaluated. Avoid contact with
+          others and wear a face mask if you need to leave your home when you
+          are sick.
+        </p>
+        <input type="button" value="Read more" class="read" />
+      </article>
+      <article id="second">
+        <h2>Keep things clean</h2>
+        <p>
+          Preventative measures are your first line of defense. The best way to
+          protect yourself from COVID-19 is to practice good hygiene and to make
+          these Centers for Disease Control and Prevention(CDC) recommendations
+          part of your routine
+        </p>
+        <p class="more2 hidden">
+          The source of the coronavirus is believed to be a "wet market" in
+          Wuhan which sold both dead and live animals including fish and birds.
+        </p>
+        <p class="more2 hidden">
+          Such markets pose a heightened risk of viruses jumping from animals to
+          humans because hygiene standards are difficult to maintain if live
+          animals are being kept and butchered on site. Typically, they are also
+          densely packed.
+        </p>
+        <p class="more2 hidden">
+          The animal source of the latest outbreak has not yet been identified,
+          but the original host is thought to be bats. Bats were not sold at the
+          Wuhan market but may have infected live chickens or other animals sold
+          there.
+        </p>
+        <input type="button" value="Read more" class="read2" />
+      </article>
+      <article id="third">
+        <h2>Maintain food Hygiene</h2>
+        <p>
+          The 2019 novel coronavirus causes respiratory illness, not foodborne
+          illness — meaning it affects the lungs, not the digestive system.
+          According to the U.S. Food and Drug Administration, there’s currently
+          no reason to believe that the virus has been spread via food or food
+          packaging.
+        </p>
+        <p class="more3 hidden">
+          But officials still urge everyone to follow basic food safety
+          guidelines that call for washing your hands before eating or preparing
+          food, using clean utensils, and properly preparing and storing food.
+          Restaurants and delivery services should also be following safe food
+          preparation and handling practices.
+        </p>
+        <input type="button" value="Read more" class="read3" />
+      </article>
+      <article id="fourth">
+        <h2>Cancel travel plans</h2>
+        <p>
+          The Centers for Disease Control and Prevention recommends avoiding all
+          nonessential travel to mainland China, Iran, South Korea, and Italy.
+          Older adults and those with chronic medical conditions should consider
+          postponing nonessential travel to Japan. For people at risk for the
+          complications of COVID-19, such as those with underlying medical
+          conditions or those who are older, it may be prudent to avoid any
+          long-distance travel,
+        </p>
+        <p class="more4 hidden">
+          he Foreign Office advised British nationals to avoid all non-essential
+          foreign travel for at least 30 days. In any case, several countries
+          have established travel bans, preventing Britons and foreign nationals
+          from entering.
+        </p>
+        <p class="more4 hidden">
+          Keep in mind, layovers at airports in these destinations also count.
+          If a layover is unavoidable, the CDC recommends that travelers not
+          leave the airport. Travelers with layovers may still be subject to
+          screening and monitoring when entering the Country.
+        </p>
+        <input type="button" value="Read more" class="read4" />
+      </article>
+      <article id="fifth">
+        <h2>Do general cleaning</h2>
+        <p>
+          In everyday life, you can reduce your risk of infection by maintaining
+          good hand hygiene.
+        </p>
+        <ul>
+          <li>
+            Start cleaning from cleaner areas and proceed towards dirtier
+            areas. All surfaces that are frequently touched (e.g. door handles,
+            armrests, table tops, light switches, water taps) need to be cleaned
+            thoroughly and frequently.
+          </li>
+          <li>
+            In public premises where people touch the surfaces, the cleaning
+            should be done daily at least. If possible even more often e.g.
+            between 2-4 hours especially during the epidemic.
+          </li>
+          <li class="more5 hidden">
+            The public premises of workplaces must be cleaned using different
+            equipment than the premises used by employees.
+          </li>
+          <li class="more5 hidden">
+            Use a mildly alkaline all-purpose detergent for cleaning. The
+            cleaning of sanitary facilities can be enhanced by using a
+            disinfectant.
+          </li>
+          <li class="more5 hidden">
+            Wear gloves to protect the hands when cleaning surfaces. After
+            cleaning, the gloves must either be carefully washed and dried or
+            replaced with a new pair.
+          </li>
+          <li class="more5 hidden">
+            Use tight-fitting disposable gloves, for example, as all-purpose
+            gloves. Long gloves must be used when cleaning toilets, and the
+            gloves must then be kept separate from other cleaning equipment
+            until they are carefully washed with water and detergent at the end
+            of the cleaning round.
+          </li>
+          <li class="more5 hidden">
+            Carefully clean the equipment used in cleaning at the end of the
+            cleaning process.
+          </li>
+          <li class="more5 hidden">
+            Use leakproof and easily removable bags in waste bins. Monitor waste
+            bins and do not let them get more than three-quarters full. Empty
+            waste bins daily, especially in public premises. The collected bin
+            bags must be closed tightly and disposed of in mixed waste for
+            incineration.
+          </li>
+          <li class="more5 hidden">
+            Wash hands and forearms with water and soap when the gloves are
+            taken off.
+          </li>
+        </ul>
+        <input type="button" value="Read more" class="read5" />
+      </article>
+      <article id="sixth">
+        <h2>Take steps to protect yourself</h2>
+        <div>
+          <div>
+            <h3 id="one">Clean your hands often</h3>
+            <ul>
+              <li>
+                Wash your hands often with soap and water for at least 20
+                seconds especially after you have been in a public place, or
+                after blowing your nose, coughing, or sneezing.
+              </li>
+              <li class="more6 hidden">
+                If soap and water are not readily available, use a hand
+                sanitizer that contains at least 60% alcohol. Cover all surfaces
+                of your hands and rub them together until they feel dry.
+              </li>
+              <li class="more6 hidden">
+                Avoid touching your eyes, nose, and mouth with unwashed hands.
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/precautions/hands.png"
+            alt="hand washing"
+            class="more6 hidden"
+          />
+        </div>
+        <div>
+          <div>
+            <h3 id="two">Avoid close contact</h3>
+            <ul>
+              <li>Avoid close contact with people who are sick</li>
+              <li class="more6 hidden">
+                Put distance between yourself and other people if COVID-19 is
+                spreading in your community. This is especially important for
+                people who are at higher risk of getting very sick.
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/precautions/home.png"
+            alt="stay home"
+            class="more6 hidden"
+          />
+        </div>
+        <input type="button" value="Read more" class="read6" />
+        <h2>Take steps to protect others</h2>
+        <div>
+          <div>
+            <h3 id="three">Stay home if you’re sick</h3>
+            <ul>
+              <li>
+                Stay home if you are sick, except to get medical care. Learn
+                what to do if you are sick.
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/precautions/bed.png"
+            alt="lay on bed"
+            class="more9 hidden"
+          />
+        </div>
+        <div>
+          <div>
+            <h3 id="four">Cover coughs and sneezes</h3>
+            <ul>
+              <li>
+                Cover your mouth and nose with a tissue when you cough or sneeze
+                or use the inside of your elbow.
+              </li>
+              <li>Throw used tissues in the trash.</li>
+              <li class="more9 hidden">
+                Immediately wash your hands with soap and water for at least 20
+                seconds. If soap and water are not readily available, clean your
+                hands with a hand sanitizer that contains at least 60% alcohol.
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/precautions/cover.png"
+            alt="cover your face"
+            class="more9 hidden"
+          />
+        </div>
+        <div>
+          <div>
+            <h3 id="five">Wear a facemask if you are sick</h3>
+            <ul>
+              <li>
+                If you are sick: You should wear a facemask when you are around
+                other people (e.g., sharing a room or vehicle) and before you
+                enter a healthcare provider’s office. If you are not able to
+                wear a facemask (for example, because it causes trouble
+                breathing), then you should do your best to cover your coughs
+                and sneezes, and people who are caring for you should wear a
+                facemask if they enter your room.
+              </li>
+              <li class="more9 hidden">
+                If you are NOT sick: You do not need to wear a facemask unless
+                you are caring for someone who is sick (and they are not able to
+                wear a facemask). Facemasks may be in short supply and they
+                should be saved for caregivers.
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/precautions/mask.png"
+            alt="wear a mask"
+            class="more9 hidden"
+          />
+        </div>
+        <div>
+          <div>
+            <h3 id="six">Clean and disinfect</h3>
+            <ul>
+              <li>
+                Clean AND disinfect frequently touched surfaces daily. This
+                includes tables, doorknobs, light switches, countertops,
+                handles, desks, phones, keyboards, toilets, faucets, and sinks.
+              </li>
+              <li class="more9 hidden">
+                If surfaces are dirty, clean them: Use detergent or soap and
+                water prior to disinfection.
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/precautions/clean.png"
+            alt="clean sunfaces"
+            class="more9 hidden"
+          />
+        </div>
+        <input type="button" value="Read more" class="read9" />
+      </article>
+      <article id="seventh">
+        <div>
+          <h2>Do's</h2>
+          <ul>
+            <li>
+              Practice frequent hand washing. Wash hands with soap and water or
+              use alcohol based hand rub. Wash hands even if they are visibly
+              clean
+            </li>
+            <li>
+              Cover your nose and mouth with handkerchief/tissue while sneezing
+              and coughing
+            </li>
+            <li class="more7 hidden">
+              Throw used tissues into closed bins immediately after use
+            </li>
+            <li class="more7 hidden">
+              See a doctor if you feel unwell (fever, difficult breathing and
+              cough). While visiting doctor wear a mask/cloth to cover your
+              mouth and nose
+            </li>
+            <li class="more7 hidden">
+              Avoid participating in large gatherings
+            </li>
+            <li class="more7 hidden">
+              Person suffering from Influenza like illness must be confined at
+              home
+            </li>
+            <li class="more7 hidden">
+              Stay more than one arm's length distance from persons sick with
+              flu
+            </li>
+            <li class="more7 hidden">Take adequate sleep and rest</li>
+            <li class="more7 hidden">
+              Drink plenty of water/liquids and eat nutritious food
+            </li>
+            <li class="more7 hidden">
+              If you have these signs/symptoms please call State helpline number
+              or Ministry of Health & Family Welfare’s 24X7 helpline at
+              011-23978046
+            </li>
+          </ul>
+          <input type="button" value="Read more" class="read7" />
+        </div>
+        <div>
+          <h2>Don'ts</h2>
+          <ul>
+            <li>
+              Have a close contact with anyone, if you’re experiencing cough and
+              fever
+            </li>
+            <li>
+              Touching eyes, nose or mouth with unwashed hands while coughing or
+              sneezing
+            </li>
+            <li class="more8 hidden">Spit in public</li>
+            <li class="more8 hidden">
+              Taking medicines without consulting doctor
+            </li>
+            <li class="more8 hidden">
+              Touching surfaces usually used by public (Railing, door,
+              gates,etc)
+            </li>
+          </ul>
+          <input type="button" value="Read more" class="read8" />
+        </div>
+      </article>
+      <article id="eighth">
+        <h2>Do what government says</h2>
+        <div class="iframe-container">
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/v-852f1PXBo?controls=0"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </article>
+    </main>
+
+    <div class="menu-button">
+      <img src="./images/virus.png" alt="menu-button" />
+    </div>
+
+    <aside class="sidenav">
+      <div class="side-logo">
+        <a href="#top" id="up">COVID-19</a>
+      </div>
+      <div class="menu-list">
+        <a class="menu-item" href="#first">Know the signs</a>
+        <a class="menu-item" href="#second">Keep things clean</a>
+        <a class="menu-item" href="#third">Maintain food Hygiene</a>
+        <a class="menu-item" href="#fourth">Cancel travel plans</a>
+        <a class="menu-item" href="#fifth">Do general cleaning</a>
+        <a class="menu-item" href="#sixth">Take steps to protect</a>
+        <a class="menu-item" href="#seventh">Do's and Don'ts</a>
+        <a class="menu-item" href="#eighth">Do what government says</a>
+      </div>
+    </aside>
+
+    <!-- ************************* -->
+
+    <footer>
+      <div class="more-info">
+        <span
+          >For more informatin visit WHO ---><a
+            href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019"
+            target="_blank"
+            >here</a
+          ></span
+        >
+      </div>
+      <div class="social">
+        <a href="https://www.facebook.com/iamamamdubey" target="_blank">
+          <i class="fab fa-facebook-square"></i
+        ></a>
+        <a href="https://www.instagram.com/iamamandubey/" target="_blank"
+          ><i class="fab fa-instagram-square"></i
+        ></a>
+        <a href="https://github.com/aman-can" target="_blank"
+          ><i class="fab fa-github-square"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
