End of the website🎬🔚🔚

--- a/precaution.html
+++ b/precaution.html
@@ -426,9 +426,24 @@
         <a class="menu-item" href="#third">Maintain food Hygiene</a>
         <a class="menu-item" href="#fourth">Cancel travel plans</a>
         <a class="menu-item" href="#fifth">Do general cleaning</a>
-        <a class="menu-item" href="#sixth">Take steps to protect</a>
+        <!-- <a class="menu-item" href="#sixth">Take steps to protect</a> -->
+        <p id="long-nav">Take steps to protect</p>
         <a class="menu-item" href="#seventh">Do's and Don'ts</a>
         <a class="menu-item" href="#eighth">Do what government says</a>
+      </div>
+    </aside>
+
+    <aside class="sidenav2">
+      <div class="side-logo2">
+        <a href="#sixth" id="back">Take steps to protect</a>
+      </div>
+      <div class="menu-list2">
+        <a class="menu-item2" href="#one">Clean your hands often</a>
+        <a class="menu-item2" href="#two">Avoid close contact</a>
+        <a class="menu-item2" href="#three">Stay home if you’re sick</a>
+        <a class="menu-item2" href="#four">Cover coughs and sneezes</a>
+        <a class="menu-item2" href="#five">Wear a facemask if you are sick</a>
+        <a class="menu-item2" href="#six">Clean and disinfect</a>
       </div>
     </aside>
 
